# spark-costs

./: .gitignore
.github/workflows/: release-app.yaml  release-mon.yaml
api/: ;  Dockerfile  Makefile  config.py  crud.py  database.py  docker-compose.yaml  enums.py  main.py  model.py  pyproject.toml  schema.py  worker.py
api/scripts/: generate_usage.py
api/static/: styles.css
api/templates/: detail.html  list.html
k8s/: configmap.yaml  database.yaml  redis.yaml  web.yaml  worker.yaml
mon/: go.mod  go.sum  main.go
scripts/: generate_usage.py
