[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["oopjot <pitercpo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.108.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.0.8"
boto3 = "^1.34.158"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
